Migrate v1.5 from ZIP file

--- a/ScribbleHunter/ScribbleHunter/ScribbleHunter.csproj
+++ b/ScribbleHunter/ScribbleHunter/ScribbleHunter.csproj
@@ -51,6 +51,9 @@
     <XnaCompressContent>false</XnaCompressContent>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AdDuplex.Xna">
+      <HintPath>..\..\..\..\..\lib\adduplex-xna-v.1.2.3\AdDuplex.Xna.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Advertising.Mobile, Version=6.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Advertising.Mobile.UI, Version=6.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Advertising.Mobile.Xna, Version=6.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
@@ -97,6 +100,8 @@
     <Compile Include="LevelManager.cs" />
     <Compile Include="MainMenuManager.cs" />
     <Compile Include="MD5.cs" />
+    <Compile Include="Nokia\FeedbackHelper.cs" />
+    <Compile Include="Nokia\StorageHelper.cs" />
     <Compile Include="Particle.cs" />
     <Compile Include="PhonePositionManager.cs" />
     <Compile Include="PlayerManager.cs" />
@@ -120,6 +125,7 @@
     </None>
     <None Include="Properties\WMAppManifest.xml">
       <XnaPlatformSpecific>true</XnaPlatformSpecific>
+      <SubType>Designer</SubType>
     </None>
     <Compile Include="Program.cs" />
   </ItemGroup>
